update to internal commit 1a517930

--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -21,7 +21,7 @@ Due to these significant changes, a substantial rewrite of your existing code wi
 > NOTE
 > 
 > In this guide, we assume the following
-> 1. The `BarcodeReader` or `BarcodeScanner` instance is called `reader` or `scanner`;
+> 1. The `BarcodeReader` or `BarcodeScanner` instance is called `reader` or `scanner` respectively;
 > 2. The `CaptureVisionRouter` instance is called `router`;
 > 3. The `CameraEnhancer` instance is called `cameraEnhancer`;
 > 4. The `CameraView` instance is called `cameraView`.
@@ -175,7 +175,7 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 | `scanner.play()`                                  | [cameraEnhancer.open()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#open) or <br>[cameraEnhancer.resume()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#resume) if paused.                                                                      |
 | `scanner.onPlayed`                                | [cameraEnhancer.on("played", fn)](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/auxiliary.html#on)                                                                                                                                                                                                                                   |
 | `scanner.pauseScan()`                             | [router.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#stopcapturing) while camera is still playing.                                                                                                                                     |
-| `scanner.resumeScan()`                            | [router.startCautring('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing) when camera is already playing.                                                                                                               |
+| `scanner.resumeScan()`                            | [router.startCapturing('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing) when camera is already playing.                                                                                                               |
 | `scanner.pause()`                                 | [cameraEnhancer.pause()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#pause)                                                                                                                                                                                                                                    |
 | `scanner.stop()`                                  | [cameraEnhancer.close()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#close)                                                                                                                                                                                                                                    |
 | `scanner.videoSrc`                                | [cameraEnhancer.videoSrc](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#videosrc)                                                                                                                                                                                                                                |
@@ -197,6 +197,96 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 | `scanner.setColorTemperature()`                   | [cameraEnhancer.setColorTemperature()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#setcolortemperature)                                                                                                                                                                                                        |
 | `scanner.getExposureCompensation()`               | [cameraEnhancer.getExposureCompensation()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#getexposurecompensation)                                                                                                                                                                                                |
 | `scanner.setExposureCompensation()`               | [cameraEnhancer.setExposureCompensation()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#setexposurecompensation)                                                                                                                                                                                                |
+
+## API Changes for RuntimeSettings and Templates
+
+Previously, in v9.x of DBR JS, there were several ways to change the settings of the `BarcodeReader` or `BarcodeScanner` instance. The first and most popular was to use the RuntimeSettings interface, and the second was to use JSON Templates. In this section of the upgrade guide, we will detail the API changes that have been made to these two configurations.
+
+### Migrate Your Templates 
+
+The template system is upgraded. The template you used for the previous version can't be directly recognized by the new version. Please <a href="https://download2.dynamsoft.com/dcv/TemplateConverter.zip" target="_blank">download the TemplateConverter tool (only Windows)</a> or <a href="https://www.dynamsoft.com/company/customer-service/#contact" target="_blank">contact us</a> to upgrade your template.
+
+Once you have the new template, please use the new template-based API as follows:
+
+| Old APIs | New APIs |
+| :----------- | :------- |
+| `reader.initRuntimeSettingsWithString()` | [router.initSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#initsettings) |
+| `reader.outputRuntimeSettingsToString()` | [router.outputSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#outputsettings) |
+
+
+> Note: 
+> Like v9.x, the JavaScript edition of the Barcode Reader only allows for JSON strings to be used as templates. JSON files cannot be used to initiate the settings in the JavaScript edition.
+
+### Changes to the RuntimeSettings
+
+The second way in which the settings can be defined in v9.x was to use the `RuntimeSettings` interface. In v10.x, the `RuntimeSettings` have been refactored. It retains commonly used properties while removing the previously complex property settings, which are now exclusively supported through templates. The APIs for accessing and updating `RuntimeSettings` has been adjusted as follows:
+
+| Old APIs | New APIs |
+| :----------- | :------- |
+| `scanner.getRuntimeSettings()` | [router.getSimplifiedSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#getsimplifiedsettings) |
+| `scanner.updateRuntimeSettings()` | [router.updateSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#updatesettings) |
+
+#### Migrate to SimplifiedCaptureVisionSettings
+
+The following properties are replaced by similar properties under `SimplifiedCaptureVisionSettings`. They can also be set via a template string. These properties, compared to the ones in `SimplifiedBarcodeReaderSettings` that are in the next section, are shared across all of the Capture Vision products, so they are not specific to just the Barcode Reader.
+
+| RuntimeSettings Property | SimplifiedCaptureVisionSettings Parameter | Template File Parameter |
+| ------------------------------- | ----------------------------------------- | ----------------------- |
+| `region` | [`roi`](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html#roi) & [`roiMeasuredInPercentage`](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html#roimeasuredinpercentage) | [`TargetROIDef.Location.Offset`]({{ site.dcv_parameters_reference }}target-roi-def/location.html?product=dbr&repoType=core){:target="_blank"} |
+| `timeout` | **Deprecated and no longer available** | **Deprecated and no longer available** |
+
+#### Migrate to SimplifiedBarcodeReaderSettings
+
+The following properties are replaced by similar properties under `SimplifiedBarcodeReaderSettings`. The majority of them can also be set via a template file(String).
+
+| RuntimeSettings Property | SimplifiedBarcodeReaderSettings Property | Template File Parameter |
+| ------------------------------- | ----------------------------------------- | ----------------------- |
+| `minBarcodeTextLength` | [`minBarcodeTextLength`](../api-reference/interfaces/simplified-barcode-reader-settings.md#minbarcodetextlength) | [`BarcodeFormatSpecification.BarcodeTextLengthRangeArray`]({{ site.dcv_parameters_reference }}barcode-format-specification/barcode-text-length-range-array.html?product=dbr&repoType=core){:target="_blank"} |
+| `minResultConfidence` | [`minResultConfidence`](../api-reference/interfaces/simplified-barcode-reader-settings.md#minresultconfidence) | [`BarcodeFormatSpecification.MinResultConfidence`]({{ site.dcv_parameters_reference }}barcode-format-specification/min-result-confidence.html?product=dbr&repoType=core){:target="_blank"} |
+| `localizationModes` | [`localizationModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#localizationmodes) | [`BarcodeReaderTaskSetting.LocationModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/localization-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `expectedBarcodesCount` | [`expectedBarcodesCount`](../api-reference/interfaces/simplified-barcode-reader-settings.md#expectedbarcodescount) | [`BarcodeReaderTaskSetting.ExpectedBarcodesCount`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/expected-barcodes-count.html?product=dbr&repoType=core){:target="_blank"} |
+| `barcodeFormatIds` | [`barcodeFormatIds`](../api-reference/interfaces/simplified-barcode-reader-settings.md#barcodeformatids) | [`BarcodeReaderTaskSetting.BarcodeFormatIds`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/barcode-format-ids.html?product=dbr&repoType=core){:target="_blank"} |
+| `barcodeFormatIds_2` | [`barcodeFormatIds`](../api-reference/interfaces/simplified-barcode-reader-settings.md#barcodeformatids) | [`BarcodeReaderTaskSetting.BarcodeFormatIds`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/barcode-format-ids.html?product=dbr&repoType=core){:target="_blank"} |
+| `deblurModes` | [`deblurModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#deblurmodes) | [`BarcodeReaderTaskSetting.DeblurModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/deblur-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `deblurLevel` | [`deblurModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#deblurmodes) | [`BarcodeReaderTaskSetting.DeblurModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/deblur-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `maxAlgorithmThreadCount` | [`maxThreadsInOneTask`]({{ site.dbr_cpp_api }}simplified-barcode-reader-settings.html#maxthreadsinonetask) | [`BarcodeReaderTaskSetting.MaxThreadsInOneTask`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/max-threads-in-one-task.html?product=dbr&repoType=core){:target="_blank"} |
+
+> Remarks:
+>
+> * The 2 groups of barcode formats are merged.
+> * `DeblurLevel` is deprecated. You can use `DeblurModes` instead.
+
+| FurtherModes Property | SimplifiedBarcodeReaderSettings Property | Template File Parameter |
+| ---------------------- | ----------------------------------------- | ----------------------- |
+| `grayscaleTransformationModes` | [`grayscaleTransformationModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#grayscaletransformationmodes) | [`ImageParameter.GrayscaleTransformationModes`]({{ site.dcv_parameters_reference }}image-parameter/grayscale-enhancement-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `imagePreprocessingModes` | [`grayscaleEnhancementModes`](../api-reference/interfaces/simplified-barcode-reader-settings.md#grayscaleenhancementmodes) | [`ImageParameter.GrayscaleEnhancementModes`]({{ site.dcv_parameters_reference }}image-parameter/grayscale-transformation-modes.html?product=dbr&repoType=core){:target="_blank"} |
+
+> Remarks: The mode `IPM_MORPHOLOGY` of `imagePreprocessingModes` is migrated to `BinarizationModes`. The mode arguments `MorphOperation`, `MorphOperationKernelSizeX`, `MorphOperationKernelSizeY`, `MorphShape` are now available for all modes of `BinarizationModes`.
+
+#### Migrate to Template
+
+So far, we mentioned the settings that have been included in the *SimplifiedCaptureVisionSettings* and the *SimplifiedBarcodeReaderSettings*. However, not all of the `RuntimeSettings` were moved to either of these interfaces. Some settings have to be defined via a template. Here is a list of all the settings and their corresponding Template File Parameter:
+
+| RuntimeSettings Property | Template File Parameter |
+| ------------------------------- | ----------------------- |
+| `scaleDownThreshold` | [`ImageParameter.ScaleDownThreshold`]({{ site.dcv_parameters_reference }}image-parameter/scale-down-threshold.html?product=dbr&repoType=core){:target="_blank"} |
+| `binarizationModes` | [`ImageParameter.BinarizationModes`]({{ site.dcv_parameters_reference }}image-parameter/binarization-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `textResultOrderModes` | [`BarcodeReaderTaskSetting.TextResultOrderModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/text-result-order-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `returnBarcodeZoneClarity` | [`BarcodeReaderTaskSetting.ReturnBarcodeZoneClarity`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/return-barcode-zone-clarity.html?product=dbr&repoType=core){:target="_blank"} |
+| `scaleUpModes` | [`ImageParameter.ScaleUpModes`]({{ site.dcv_parameters_reference }}image-parameter/scale-up-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `barcodeZoneMinDistanceToImageBorders` | [`BarcodeFormatSpecification.BarcodeZoneMinDistanceToImageBorders`]({{ site.dcv_parameters_reference }}barcode-format-specification/barcode-zone-min-distance-to-image-borders.html?product=dbr&repoType=core){:target="_blank"} |
+| `terminatePhase` | [`BarcodeReaderTaskSetting.TerminateSettings`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/terminate-setting.html?product=dbr&repoType=core){:target="_blank"} |
+
+| FurtherModes Property | Template File Parameter |
+| ---------------------- | ----------------------- |
+| `colourConversionModes` | [`ImageParameter.ColourConversionModes`]({{ site.dcv_parameters_reference }}image-parameter/colour-conversion-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `regionPredetectionModes` | [`ImageParameter.RegionPredetectionModes`]({{ site.dcv_parameters_reference }}image-parameter/region-predetection-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `textureDetectionModes` | [`ImageParameter.TextureDetectionModes`]({{ site.dcv_parameters_reference }}image-parameter/texture-detection-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `textFilterModes` | [`ImageParameter.TextDetectionMode`]({{ site.dcv_parameters_reference }}image-parameter/text-detection-mode.html?product=dbr&repoType=core){:target="_blank"} & [`ImageParameter.IfEraseTextZone`]({{ site.dcv_parameters_reference }}image-parameter/if-erase-text-zone.html?product=dbr&repoType=core){:target="_blank"} |
+| `dpmCodeReadingModes` | [`BarcodeReaderTaskSetting.DPMCodeReadingModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/dpm-code-reading-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `deformationResistingModes` | [`BarcodeReaderTaskSetting.DeformationResistingModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/deformation-resisting-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `barcodeComplementModes` | [`BarcodeReaderTaskSetting.BarcodeComplementModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/barcode-complement-modes.html?product=dbr&repoType=core){:target="_blank"} |
+| `barcodeColourModes` | [`BarcodeReaderTaskSetting.BarcodeColourModes`]({{ site.dcv_parameters_reference }}barcode-reader-task-settings/barcode-colour-modes.html?product=dbr&repoType=core){:target="_blank"} |
 
 
 ## Other API changes
