--- a/programming/javascript/release-notes/js-10.md
+++ b/programming/javascript/release-notes/js-10.md
@@ -89,3 +89,5 @@ In this version, the SDK has been refactored under the `DynamsoftCaptureVision` 
 * This version of `BarcodeReader` only accepts `DynamsoftCameraEnhancer(DCE)` version 4.0.1 and above, which has been refactored to be compliant with the [ImageSourceAdapter (ISA) interface](https://www.dynamsoft.com/capture-vision/docs/core/architecture/input.html#image-source-adapter){:target="_blank"}, as a valid image source.
 
 * Decoded barcode results are returned via the [CapturedResultReceiver (CRR) interface](https://www.dynamsoft.com/capture-vision/docs/core/architecture/output.html#captured-result-receiver){:target="_blank"}.
+
+* For the full list of API changes, please refer to the [v9 to v10 Upgrade Guide](../upgrade-guide/9to10.md).
