--- a/programming/javascript/upgrade-guide/9to10.md
+++ b/programming/javascript/upgrade-guide/9to10.md
@@ -22,7 +22,7 @@ Due to these significant changes, a substantial rewrite of your existing code wi
 > 
 > In this guide, we assume the following
 > 1. The `BarcodeReader` or `BarcodeScanner` instance is called `reader` or `scanner` respectively;
-> 2. The `CaptureVisionRouter` instance is called `router`;
+> 2. The `CaptureVisionRouter` instance is called `cvRouter`;
 > 3. The `CameraEnhancer` instance is called `cameraEnhancer`;
 > 4. The `CameraView` instance is called `cameraView`.
 
@@ -86,8 +86,8 @@ APIs for setting up the SDK have been taken over by the new classes `CaptureVisi
 
 | API in v9.x                                                         | API in v10.x                                                                                                                                                                       |
 | ------------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `reader.destroyContext()` or <br>`scanner.destroyContext()`         | [router.dispose()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#dispose) |
-| `reader.isContextDestroyed()` or <br>`scanner.isContextDestroyed()` | [router.disposed](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#disposed) |
+| `reader.destroyContext()` or <br>`scanner.destroyContext()`         | [cvRouter.dispose()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#dispose) |
+| `reader.isContextDestroyed()` or <br>`scanner.isContextDestroyed()` | [cvRouter.disposed](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/instantiate.html?product=dbr&repoType=web#disposed) |
 
 
 ## Change the APIs for image processing
@@ -96,29 +96,29 @@ APIs for setting up the SDK have been taken over by the new classes `CaptureVisi
 
 | API in v9.x                                 | API in v10.x                                                                                                                                                                                                                                 |
 | ------------------------------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `reader.decode()` or <br>`scanner.decode()` | [router.capture()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/single-file-processing.html?product=dbr&repoType=web#capture) that specifies a template for barcode reading. |
+| `reader.decode()` or <br>`scanner.decode()` | [cvRouter.capture()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/single-file-processing.html?product=dbr&repoType=web#capture) that specifies a template for barcode reading. |
 
 ### Multiple-Image processing
 
 | API in v9.x                                         | API in v10.x                                                                                                                                                                                                                                                                                                                                                                    |
 | --------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `reader.setImageSource()`                           | [router.setInput()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#setinput)                                                                                                                                                                               |
-| `reader.onImageRead` or <br>`scanner.onFrameRead`   | `let resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onDecodedBarcodesReceived = result => { };`<br>`router.addResultReceiver(resultReceiver)`                                                                                                                                                                                                 |
-| `reader.onUniqueRead` or <br>`scanner.onUniqueRead` | `let filter = new MultiFrameResultCrossFilter();`<br>`filter.enableResultDeduplication(EnumCapturedResultItemType.CRIT_BARCODE, true);`<br>`router.addResultFilter(filter);`<br>`let resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onDecodedBarcodesReceived = result => { };`<br>`router.addResultReceiver(resultReceiver);`                |
-| `reader.startScanning()` or <br>`scanner.show()`    | `let view = await Dynamsoft.DCE.CameraView.createInstance();`<br>`cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance(view);`<br>`//"cameraViewContainer" is usually an HTMLDivElement`<br>`cameraViewContainer.append(view.getUIElement());`<br>`router.setInput(cameraEnhancer);`<br>`cameraEnhancer.open();`<br>`router.startCapturing("SPECIFY-A-TEMPLATE")` |
-| `reader.stopScanning()` or <br>`scanner.hide()`     | [router.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#stopcapturing)<br>`cameraEnhancer.close();`<br>`cameraViewContainer.style.display = "none"`                                                                                        |
-| `reader.resumeScanning()`                           | [router.startCautring('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#startcapturing)                                                                                                                                                |
+| `reader.setImageSource()`                           | [cvRouter.setInput()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#setinput)                                                                                                                                                                               |
+| `reader.onImageRead` or <br>`scanner.onFrameRead`   | `let resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onDecodedBarcodesReceived = result => { };`<br>`cvRouter.addResultReceiver(resultReceiver)`                                                                                                                                                                                                 |
+| `reader.onUniqueRead` or <br>`scanner.onUniqueRead` | `let filter = new MultiFrameResultCrossFilter();`<br>`filter.enableResultDeduplication(EnumCapturedResultItemType.CRIT_BARCODE, true);`<br>`cvRouter.addResultFilter(filter);`<br>`let resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onDecodedBarcodesReceived = result => { };`<br>`cvRouter.addResultReceiver(resultReceiver);`                |
+| `reader.startScanning()` or <br>`scanner.show()`    | `let cameraView = await Dynamsoft.DCE.CameraView.createInstance();`<br>`cameraEnhancer = await Dynamsoft.DCE.CameraEnhancer.createInstance(cameraView);`<br>`//"cameraViewContainer" is usually an HTMLDivElement`<br>`cameraViewContainer.append(cameraView.getUIElement());`<br>`cvRouter.setInput(cameraEnhancer);`<br>`cameraEnhancer.open();`<br>`cvRouter.startCapturing("SPECIFY-A-TEMPLATE")` |
+| `reader.stopScanning()` or <br>`scanner.hide()`     | [cvRouter.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#stopcapturing)<br>`cameraEnhancer.close();`<br>`cameraViewContainer.style.display = "none"`                                                                                        |
+| `reader.resumeScanning()`                           | [cvRouter.startCautring('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-image-processing.html?product=dbr&repoType=web#startcapturing)                                                                                                                                                |
 
 ### Process Settings
 
-The following assumes `ScanSettings` is the object returned by `reader.getScanSettings()` or `scanner.getScanSettings()` and `SimplifiedCaptureVisionSettings` is returned by `router.getSimplifiedSettings('SPECIFY-A-TEMPLATE')`.
+The following assumes `ScanSettings` is the object returned by `reader.getScanSettings()` or `scanner.getScanSettings()` and `SimplifiedCaptureVisionSettings` is returned by `cvRouter.getSimplifiedSettings('SPECIFY-A-TEMPLATE')`.
 
 | API in v9.x                                                         | API in v10.x                                                                                                                                                                                                                                                                                                  |
 | ------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
 | `reader.getScanSettings()` or <br>`scanner.getScanSettings()`       | No equivalent.                                                                                                                                                                                                                                                                                                |
 | `reader.updateScanSettings()` or <br>`scanner.updateScanSettings()` | No equivalent.                                                                                                                                                                                                                                                                                                |
 | `ScanSettings.intervalTime`                                         | [SimplifiedCaptureVisionSettings.minImageCaptureInterval](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/interfaces/simplified-capture-vision-settings.html?product=dbr&repoType=web#minimagecaptureinterval)                                   |
-| `ScanSettings.duplicateForgetTime`                                  | `let filter = new MultiFrameResultCrossFilter();`<br>`filter.setDuplicateForgetTime();`<br>`router.addResultFilter(filter)`                                                                                                                                                                                   |
+| `ScanSettings.duplicateForgetTime`                                  | `let filter = new MultiFrameResultCrossFilter();`<br>`filter.setDuplicateForgetTime();`<br>`cvRouter.addResultFilter(filter)`                                                                                                                                                                                   |
 | `ScanSettings.whenToPlaySoundforSuccessfulRead`                     | No equivalent. Use [Dynamsoft.DCE.Feedback.beep()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/feedback.html#beep) when appropriate.                                                                                                                              |
 | `ScanSettings.soundOnSuccessfullRead`                               | [Dynamsoft.DCE.Feedback.beepSoundSource](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/feedback.html#beepsoundsource)                                                                                                                                               |
 | `ScanSettings.whenToVibrateforSuccessfulRead`                       | No equivalent. Use [Dynamsoft.DCE.Feedback.vibrate()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/feedback.html#vibrate) when appropriate.                                                                                                                        |
@@ -133,11 +133,11 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 
 | API in v9.x                                                                                                                                     | API in v10.x                                                                                                                                                                                                          |
 | ----------------------------------------------------------------------------------------------------------------------------------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| `reader.getRuntimeSettings()` or <br>`scanner.getRuntimeSettings()`                                                                             | [router.getSimplifiedSettings('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html#getsimplifiedsettings)                |
-| `reader.initRuntimeSettingsWithString('SPECIFY-A-TEMPLATE-STRING')` or <br>`scanner.initRuntimeSettingsWithString('SPECIFY-A-TEMPLATE-STRING')` | [router.initSettings('SPECIFY-A-TEMPLATE-STRING')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html#initsettings)                           |
-| `reader.updateRuntimeSettings('SPECIFY-THE-SETTINGS')` or <br>`scanner.updateRuntimeSettings('SPECIFY-THE-SETTINGS')`                           | [router.updateSettings('SPECIFY-A-TEMPLATE', 'SPECIFY-THE-SETTINGS')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html#updatesettings)      |
-| `reader.resetRuntimeSettings()` or <br>`scanner.resetRuntimeSettings()`                                                                         | [router.resetSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html#resetsettings)                                                    |
-| `reader.outputRuntimeSettingsToString()` or <br>`scanner.outputRuntimeSettingsToString()`                                                       | Use [router.outputSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html#outputsettings) which returns an object instead of a string. |
+| `reader.getRuntimeSettings()` or <br>`scanner.getRuntimeSettings()`                                                                             | [cvRouter.getSimplifiedSettings('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html#getsimplifiedsettings)                |
+| `reader.initRuntimeSettingsWithString('SPECIFY-A-TEMPLATE-STRING')` or <br>`scanner.initRuntimeSettingsWithString('SPECIFY-A-TEMPLATE-STRING')` | [cvRouter.initSettings('SPECIFY-A-TEMPLATE-STRING')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html#initsettings)                           |
+| `reader.updateRuntimeSettings('SPECIFY-THE-SETTINGS')` or <br>`scanner.updateRuntimeSettings('SPECIFY-THE-SETTINGS')`                           | [cvRouter.updateSettings('SPECIFY-A-TEMPLATE', 'SPECIFY-THE-SETTINGS')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html#updatesettings)      |
+| `reader.resetRuntimeSettings()` or <br>`scanner.resetRuntimeSettings()`                                                                         | [cvRouter.resetSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html#resetsettings)                                                    |
+| `reader.outputRuntimeSettingsToString()` or <br>`scanner.outputRuntimeSettingsToString()`                                                       | Use [cvRouter.outputSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html#outputsettings) which returns an object instead of a string. |
 
 ## Change the APIs for user interface customization
 
@@ -158,8 +158,8 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 
 | API in v9.x                                       | API in v10.x,  by the independent `CameraEnhancer` instance                                                                                                                                                                                                                                                                                                                    |
 | ------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
-| `scanner.open()`                                  | [cameraEnhancer.open()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#open) <br>[router.startCautring('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing) |
-| `scanner.close()`                                 | [router.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#stopcapturing) <br>[cameraEnhancer.close()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#close)                    |
+| `scanner.open()`                                  | [cameraEnhancer.open()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#open) <br>[cvRouter.startCautring('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing) |
+| `scanner.close()`                                 | [cvRouter.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#stopcapturing) <br>[cameraEnhancer.close()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#close)                    |
 | `scanner.isOpen()`                                | [cameraEnhancer.isOpen()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#isopen)                                                                                                                                                                                                                                  |
 | `scanner.singleFrameMode`                         | [cameraEnhancer.singleFrameMode](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/acquisition.html#singleframemode)                                                                                                                                                                                                                     |
 | `scanner.ifSkipCameraInspection`                  | [cameraEnhancer.ifSkipCameraInspection](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#ifskipcamerainspection)                                                                                                                                                                                                    |
@@ -174,8 +174,8 @@ The following assumes `ScanSettings` is the object returned by `reader.getScanSe
 | `Dynamsoft.DBR.Barcodescanner.testCameraAccess()` | [Dynamsoft.DCE.CameraEnhancer.testCameraAccess()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#testcameraaccess)                                                                                                                                                                                                |
 | `scanner.play()`                                  | [cameraEnhancer.open()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#open) or <br>[cameraEnhancer.resume()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#resume) if paused.                                                                      |
 | `scanner.onPlayed`                                | [cameraEnhancer.on("played", fn)](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/auxiliary.html#on)                                                                                                                                                                                                                                   |
-| `scanner.pauseScan()`                             | [router.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#stopcapturing) while camera is still playing.                                                                                                                                     |
-| `scanner.resumeScan()`                            | [router.startCapturing('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing) when camera is already playing.                                                                                                               |
+| `scanner.pauseScan()`                             | [cvRouter.stopCapturing()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#stopcapturing) while camera is still playing.                                                                                                                                     |
+| `scanner.resumeScan()`                            | [cvRouter.startCapturing('SPECIFY-A-TEMPLATE')](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/multiple-file-processing.html?product=dbr&repoType=web#startcapturing) when camera is already playing.                                                                                                               |
 | `scanner.pause()`                                 | [cameraEnhancer.pause()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#pause)                                                                                                                                                                                                                                    |
 | `scanner.stop()`                                  | [cameraEnhancer.close()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#close)                                                                                                                                                                                                                                    |
 | `scanner.videoSrc`                                | [cameraEnhancer.videoSrc](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/camera-control.html#videosrc)                                                                                                                                                                                                                                |
@@ -210,8 +210,8 @@ Once you have the new template, please use the new template-based API as follows
 
 | Old APIs | New APIs |
 | :----------- | :------- |
-| `reader.initRuntimeSettingsWithString()` | [router.initSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#initsettings) |
-| `reader.outputRuntimeSettingsToString()` | [router.outputSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#outputsettings) |
+| `reader.initRuntimeSettingsWithString()` | [cvRouter.initSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#initsettings) |
+| `reader.outputRuntimeSettingsToString()` | [cvRouter.outputSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#outputsettings) |
 
 
 > Note: 
@@ -223,8 +223,8 @@ The second way in which the settings can be defined in v9.x was to use the `Runt
 
 | Old APIs | New APIs |
 | :----------- | :------- |
-| `scanner.getRuntimeSettings()` | [router.getSimplifiedSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#getsimplifiedsettings) |
-| `scanner.updateRuntimeSettings()` | [router.updateSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#updatesettings) |
+| `scanner.getRuntimeSettings()` | [cvRouter.getSimplifiedSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#getsimplifiedsettings) |
+| `scanner.updateRuntimeSettings()` | [cvRouter.updateSettings()](https://www.dynamsoft.com/capture-vision/docs/web/programming/javascript/api-reference/capture-vision-router/settings.html?product=dbr&lang=javascript#updatesettings) |
 
 #### Migrate to SimplifiedCaptureVisionSettings
 
@@ -300,4 +300,4 @@ So far, we mentioned the settings that have been included in the *SimplifiedCapt
 | `scanner.onTipSuggested()`                                                       | No equivalent.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
 | `scanner.updateTipMessage()`                                                     | [cameraView.updateTipMessage()](https://www.dynamsoft.com/camera-enhancer/docs/web/programming/javascript/api-reference/cameraview.html#updatetipmessage)                                                                                                                                                                                                                                                                                                               |
 | `reader.getModeArgument()`<br>`reader.setModeArgument()`                         | No equivalent.                                                                                                                                                                                                                                                                                                                                                                                                                                                          |
-| `scanner.ifSaveOriginalImageInACanvas` <br>`scanner.getOriginalImageInACanvas()` | `settings = router.getSimplifiedSettings('SPECIFY-A-TEMPLATE');`<br>`settings.capturedResultItemTypes += Dynamsoft.Core.EnumCapturedResultItemType.CRIT_ORIGINAL_IMAGE;`<br>`await router.updateSettings("detect-document-boundaries", settings);`<br>`const resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onOriginalImageResultReceived = result => { // GET-THE-ORIGINAL-IMAGE //};`<br>`router.addResultReceiver(resultReceiver)` |
+| `scanner.ifSaveOriginalImageInACanvas` <br>`scanner.getOriginalImageInACanvas()` | `settings = cvRouter.getSimplifiedSettings('SPECIFY-A-TEMPLATE');`<br>`settings.capturedResultItemTypes += Dynamsoft.Core.EnumCapturedResultItemType.CRIT_ORIGINAL_IMAGE;`<br>`await cvRouter.updateSettings("detect-document-boundaries", settings);`<br>`const resultReceiver = new Dynamsoft.CVR.CapturedResultReceiver();`<br>`resultReceiver.onOriginalImageResultReceived = result => { // GET-THE-ORIGINAL-IMAGE //};`<br>`cvRouter.addResultReceiver(resultReceiver)` |
